# kuma

./: .babelrc  .bowerrc  .coveragerc  .csslintrc  .dockerignore  .editorconfig  .env-dist  .env-dist.dev  .env.travis  .eslintignore  .eslintrc.js  .flake8  .flowconfig  .gitignore  .gitmodules  .jshintrc  .pa11y  .pa11yci-prod  .prettierignore  .prettierrc  .pylint  .snyk  .sonarwhalrc  .stylelintignore  .stylelintrc  .therapist.yml  .travis.yml  22-image-upload.sql  Bug 747805 - Kuma: optional IRC widget  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-base  Dockerfile-builder  Dockerfile-production  Jenkinsfile  LICENSE  Makefile  My interest  Procfile  (+49 more)
.github/: dependabot.yml  merge-when-green.yml
.github/ISSUE_TEMPLATE/: bug_report.md  change-request.md  content-issue.md  feature_request.md  support-request.md  user-story
.github/workflows/: docker-compose.yml  docker.yml  documentation-build.yml  js-lints.yml  python-lints.yml
Jenkinsfiles/: create_demo_instance.sh  default.groovy  demo.groovy  dynamicmysql.yml  import-demo-db.sh  instance_cleanup.sh  integration-tests.groovy  master.groovy  prod-integration-tests.yml  push.groovy  stage-integration-tests.groovy  stage-integration-tests.yml  stage-push.groovy  standby-push.groovy  standby-push.yml  upgrade_pytest_1308322.yml  utils.groovy
__sass_tests__/: test-sass.js  test.scss
__sass_tests__/mdn/: _typography-mixin-test.scss
__tests__/: payments-handler-utils.test.js
__tests__/sass/: test.scss
apps/access/: __init__.py  decorators.py  helpers.py  tests.py
apps/chat/: cron.py  (+3 more)
assets/: README.md
compressors/: cleancss.py
configs/: htaccess  htaccess-with-mindtouch  htaccess-without-mindtouch  words.txt
docker/: docker-compose.yml  docker-mysql.repo  supervisor-celery.conf  supervisor.conf
docs/: Makefile  assets.rst  celery.rst  ckeditor.rst  coding.rst  conf.py  configuration.rst  data.rst  deploy-scl3.rst  deploy.rst  development.rst  docker.rst  documentation.rst  elasticsearch.rst  email.rst  feature-toggles.rst  index.rst  installation-docker.rst  installation-vagrant.rst  installation.rst  intern.rst  localization.rst  make.bat  migrations.rst  production.rst  rendering.rst  requirements.txt  search.rst  tests-functional.rst  tests-load.rst  tests-performance.rst  tests-ui.rst  tests.rst  troubleshooting.rst  ui-tests.rst  vendor.rst  wheels.rst  wsgi.rst
etc/: newrelic.ini  sample_db.json
intern-tests/: _base.js
jinja2/: 403.html  404.html  429.html  500.html  base.html  base_popup.html  react_base.html
k8s/: api-svc.yaml.template.sh  elasticsearch-rc.yaml  elasticsearch-svc.yaml  kumascript-deployment.yaml  kumascript-svc.yaml  memcached-rc.yaml  memcached-svc.yaml  mysql-deployment.yaml  mysql-svc.yaml  redis-rc.yaml  redis-svc.yaml
kuma/: __init__.py  admin_dashboard.py  celery.py  conftest.py  extract.py  languages.json  test_urls.py  urls.py  urls_beta.py  urls_untrusted.py  views.py  wsgi.py
kumascript2/: Makefile  index.js  package-lock.json  package.json
lib/: bitly.py  countries.py  csrf_context.py  dictconfig.py  embedutils.py  jsonfield.py  languages.json  mime_types.py  responsys.py  sumo_locales.py  utils.py  validate_jsonp.py
locale/: README.txt  compile-mo.sh  fy_NL  ga_IE
maintenance/: README.md  download-assets.sh  index.html  maintenance.css
media/: .htaccess  css  fonts  img  js  rev-manifest.json  robots.txt
migrations/: 01-add-sticky.sql  01-fix-table-engines.sql  01-initial.sql  02-add-forum-description.sql  02-demos-submission-censored-field.sql  03-authority.sql  03-demos-using-south-migrations.sql  04-demos-using-taggit.sql  04-users-permissions.sql  05-groups.sql  05-user-content-flagging-email-field.sql  06-admin-log.sql  06-taggit-convert-to-south.sql  07-devmo-convert-to-south.sql  07-notifications.sql  07-on-delete-set-null.sql  08-convert-wiki-to-south.sql  08-notifications.sql  09-add-updated-by.sql  09-contentflagging-convert-to-south.sql  10-actioncounters-convert-to-south.sql  10-create-questions-app.sql  10-unique-hash-indexes.sql  11-drop-old-wiki-tables.sql  11-drop-questionforum.sql  12-add-soapbox.sql  12-add-solution-id.sql  13-constance-unique-key.sql  13-notification-hash.sql  13-revert-wiki-migrations.sql  14-add-question-votes.sql  14-unique-hash-indexes.sql  15-add-answer-votes.sql  15-django-tidings.sql  16-add-weekly-vote-count.sql  17-add-tagging.sql  18-add-upload.sql  18-lock-question-permission.sql  19-flag-content.sql  20-unique-metadata-question-and-name.sql  (+71 more)
mockga/: Dockerfile  README.md  index.js  package.json
provisioning/: Makefile  README.rst  ansible.cfg  inventory  playbook.yml  roles.txt  travis.yml  vagrant.yml
requirements/: README.rst  compiled.txt  constraints.txt  default.txt  default_and_test.txt  dev.txt  django-apps.txt  docs.txt  linting.txt  local.txt  packages.txt  performance.txt  prod.txt  python-libs.txt  source.txt  test.txt  tests.txt  travis.txt
scripts/: anonymize.py  anonymize.sql  build.sh  build.sh.bak  centos-bootstrap.sh  centos55-bootstrap.sh  check_anonymize.sql  chief_deploy.py  ci-codecovsubmit  ci-docs  ci-flow  ci-jest  ci-js  ci-jslint  ci-localerefresh  ci-python  ci-yarn-lock-check  clone_db.py  compare-compiled-css  compile-stylesheets  create_read_only_user.sql  create_sample_db.sh  docker-compose.travis.yml  dump_local_db.sh  extract_documents.py  fix-most-vagrant-issues  generate_dev_ssl_cert.sh  irc-notify.sh  kuma-rerun.sh  migrate_all.sh  migrate_recent.sh  migrate_top.sh  post-migration.sql  pth_pydev.py  pylint.sh  pylintrc  pypi.sh  rackspace-bootstrap.sh  record_deployments.py  run_functional_tests.sh  (+10 more)
scripts/revise/: README.md  pyproject.toml  revise.py
scripts/revise/tests/: test_revise.py
static/: .htaccess
styles/: badges.styl
templates/: 403.html  404.html  500.html  base.html  base_compact.html  base_major.html  base_popup.html  base_redesign.html  generic.html
tests/: conftest.py
webpack-build-utils/: loadPresets.js  terminal.js  webpack.development.js  webpack.production.js
webroot/: .htaccess
wsgi/: kitsune.wsgi  kuma.wsgi
(+5226 files in other folders)
