[tool.poetry]
name = "kuma"
version = "0.0.0"
license = "MPL-2.0"
description = "The MDN Web Docs site"
authors = ["MDN Devs <mdn-dev@mozilla.com>"]
homepage = "https://developer.mozilla.org"
repository = "https://github.com/mdn/kuma"
documentation = "https://kuma.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.8"

celery = "^4.3.0"
dj-database-url = "^0.5.0"
dj-email-url = "^1"
django = "^3"
django-decorator-include = "^3.0"
django-extensions = "^2.2.6"
django-ratelimit = "2.0.0"
django-redis = "^5.0.0" # (Django cache backend)
django-waffle = "^0.20.0"
elasticsearch = "^7.13.1"
elasticsearch-dsl = "^7.3.0"
gunicorn = "^20.1.0"
newrelic = "6.4.4.161"
python-decouple = "^3.4"
pytz = "^2019.3"
redo = "^2.0.4"
requests = "^2.25.1"
urlwait = "^1.0"
gevent = {extras = ["gevent"], version = "^20.5.2"}
psycopg2-binary = "^2.9.1"
sentry-sdk = "^1.3.0"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
# Development Tools
werkzeug = "^1.0" # Enables runserver_plus from django-extensions

# Testing
braceexpand = "^0.1.6"
pytest = "~5.3"
pytest-base-url = "^1.4.1"
pytest-cov = "~2.8.1"
pytest-django = "~3.8.0"
pytest-metadata = "^1.11.0"
pytest-rerunfailures = "^8.0"
requests-mock = "^1.9.2"

ElasticMock = "^1.8.0"

# Linting
black = "21.6b0"
flake8 = "^3.9.2"
flake8-import-order = "^0.18.1"
dennis = "^0.9" # Used by `make localetest` to lint po files

# Pinned Dependencies
coverage = {extras = ["toml"], version = "^5"} # Use optional toml support
pytest-watch = "^4.2.0"
honcho = "^1.0.1"

[tool.black]
target-version = ["py38"]

[tool.coverage.run]
source = ["kuma"]
branch = true
dynamic_context = "test_function"

[tool.coverage.report]
omit = ["*migrations*", "*/management/commands/*"]

[tool.coverage.html]
show_contexts = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
