[tool.poetry]
name = "kuma"
version = "0.0.0"
license = "MPL-2.0"
description = "The MDN Web Docs site"
authors = ["MDN Devs <mdn-dev@mozilla.com>"]
homepage = "https://developer.mozilla.org"
repository = "https://github.com/mdn/kuma"
documentation = "https://kuma.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.10"

celery = "^4.4.7"
dj-database-url = "^0.5.0"
dj-email-url = "^1"
django = "^3"
django-decorator-include = "^3.0"
django-extensions = "^2.2.6"
django-ratelimit = "2.0.0"
django-redis = "^5.0.0" # (Django cache backend)
elasticsearch = "^7.14.1"
elasticsearch-dsl = "^7.4.0"
gunicorn = "^20.1.0"
newrelic = "6.8.1.164"
python-decouple = "^3.4"
pytz = "^2021.1"
redo = "^2.0.4"
requests = "^2.26.0"
urlwait = "^1.0"
gevent = {extras = ["gevent"], version = "^21.8.0"}
psycopg2-binary = "^2.9.1"
sentry-sdk = "^1.3.1"
whitenoise = "^5.3.0"
mozilla-django-oidc = "^2.0.0"

[tool.poetry.dev-dependencies]
# Development Tools
werkzeug = "^1.0" # Enables runserver_plus from django-extensions

# Testing
braceexpand = "^0.1.7"
pytest = "~6.2"
pytest-base-url = "^1.4.2"
pytest-cov = "~2.12.1"
pytest-django = "~4.4.0"
pytest-metadata = "^1.11.0"
pytest-rerunfailures = "^10.2"
requests-mock = "^1.9.3"

ElasticMock = "^1.8.0"

# Linting
black = "21.9b0"
flake8 = "^3.9.2"
flake8-import-order = "^0.18.1"
dennis = "^0.9" # Used by `make localetest` to lint po files

# Pinned Dependencies
coverage = {extras = ["toml"], version = "^6"} # Use optional toml support
pytest-watch = "^4.2.0"
honcho = "^1.0.1"
ipdb = "^0.13.9"
ipython = "^7.27.0"

[tool.black]
target-version = ["py38"]

[tool.coverage.run]
source = ["kuma"]
branch = true
dynamic_context = "test_function"

[tool.coverage.report]
omit = ["*migrations*", "*/management/commands/*"]

[tool.coverage.html]
show_contexts = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
