[tool.poetry]
name = "revise"
version = "0.1.0"
description = ""
authors = ["rjohnson <rjohnson@mozilla.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
click = "^7.0"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[tool.poetry.scripts]
revise = 'revise:revise'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
